--- a/src/styles.css
+++ b/src/styles.css
@@ -381,7 +381,8 @@ body {
 }
 .fixed-header .closeBtn {
   cursor: pointer;
-  height: 25px;
+  height: 18px;
+  margin-right: 7px;
   width: 18px;
 }
 .fixed-header .hamburger {
